maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:18: error: not found: type Recursive
def chercheEcrit(f:Int,g:Int):Recursive = {
                              ^